--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.4.2",
+    "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/swagger": "^7.0.1",
     "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -33,7 +34,8 @@
     "mysql2": "^3.3.5",
     "nest-mysql": "^0.0.8",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
